# NI-AM1

./: .gitignore  index.adoc
01/: Cargo.toml  readme.adoc  requests.http
01/src/: main.rs
04/: Cargo.toml  readme.adoc  requests.http
04/src/: main.rs
05/: Cargo.toml  readme.md  requests.http
05/src/: main.rs
06/: Cargo.toml  build.rs  readme.adoc  requests.http
06/proto/: bookingservice.proto
06/src/: main.rs
07/: Cargo.toml  build.rs  readme.adoc  requests.http
07/proto/: paymentservice.proto  validationservice.proto
07/src/: main.rs
09/: Cargo.toml  readme.adoc  requests.http
09/src/: main.rs
