[package]
name = "niam1_hw01"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
futures-util = "0.3.28"
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec", "io"] }
