[package]
name = "niam1_hw07"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

prost = "0.12"
tonic = "0.10"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
